check.log
    Checking nmp-server v0.1.0 (C:\Users\maseo\Documents\Developer\Projects\NMP v1.0-alpha\nmp-server)
warning: unused import: `SwarmEvent`
 --> nmp-server\src\p2p.rs:7:45
  |
7 |     swarm::{NetworkBehaviour, SwarmBuilder, SwarmEvent},
  |                                             ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tonic::Status`
  --> nmp-server\src\executor.rs:11:5
   |
11 | use tonic::Status;
   |     ^^^^^^^^^^^^^

error[E0599]: no variant or associated item named `new` found for enum `wasmtime::Trap` in the current scope
  --> nmp-server\src\executor.rs:67:49
   |
67 |                 _ => return Err(wasmtime::Trap::new("failed to find host memory")),
   |                                                 ^^^ variant or associated item not found in `wasmtime::Trap`
   |
help: there is a method `ne` with a similar name
   |
67 -                 _ => return Err(wasmtime::Trap::new("failed to find host memory")),
67 +                 _ => return Err(wasmtime::Trap::ne("failed to find host memory")),
   |

error[E0599]: no variant or associated item named `new` found for enum `wasmtime::Trap` in the current scope
  --> nmp-server\src\executor.rs:71:48
   |
71 |                 .ok_or_else(|| wasmtime::Trap::new("OOB memory access"))?;
   |                                                ^^^ variant or associated item not found in `wasmtime::Trap`
   |
help: there is a method `ne` with a similar name
   |
71 -                 .ok_or_else(|| wasmtime::Trap::new("OOB memory access"))?;
71 +                 .ok_or_else(|| wasmtime::Trap::ne("OOB memory access"))?;
   |

error[E0277]: the trait bound `{closure@nmp-server\src\executor.rs:64:9: 64:114}: IntoFunc<AgentExecutionState, _, _>` is not satisfied
   --> nmp-server\src\executor.rs:64:9
    |
 62 |       linker.func_wrap(
    |              --------- required by a bound introduced by this call
 63 |           "nmp", "push_event",
 64 | /         |mut caller: wasmtime::Caller<'_, AgentExecutionState>, ptr: u32, len: u32| -> Result<(), wasmtime::Trap> {
 65 | |             let mem = match caller.get_export("memory") {
 66 | |                 Some(wasmtime::Extern::Memory(m)) => m,
 67 | |                 _ => return Err(wasmtime::Trap::new("failed to find host memory")),
...   |
 80 | |             Ok(())
 81 | |         }
    | |_________^ the trait `IntoFunc<AgentExecutionState, _, _>` is not implemented for closure `{closure@nmp-server\src\executor.rs:64:9: 64:114}`
    |
note: required by a bound in `wasmtime::Linker::<T>::func_wrap`
   --> C:\Users\maseo\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wasmtime-14.0.4\src\linker.rs:552:20
    |
548 |     pub fn func_wrap<Params, Args>(
    |            --------- required by a bound in this associated function
...
552 |         func: impl IntoFunc<T, Params, Args>,
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Linker::<T>::func_wrap`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `nmp-server` (bin "nmp-server") generated 2 warnings
error: could not compile `nmp-server` (bin "nmp-server") due to 3 previous errors; 2 warnings emitted
